# Crack-Jack

./: .gitignore  CMakeLists.txt  README.md  roadmap.docx
include/: batch_hash.h  benchmark.h  brute_force_cracker.h  cpu_features.h  hash_utils.h  interactive.h  mask_util.h  optimizer.h  pdf_utils.h  resume_manager.h  thread_pool.h  wordlist_cracker.h
src/: batch_hash.cpp  benchmark.cpp  brute_force_cracker.cpp  cpu_features.cpp  hash_utils.cpp  interactive.cpp  main.cpp  mask_util.cpp  optimizer.cpp  resume_manager.cpp  thread_pool.cpp  wordlist_cracker.cpp
wordlists/: test.txt
